2.8.1 (27/02/21)
- FIX(better): exposed real python methods need to respect the same signature (func(x,ENV)), as pymethod declared in conf
        and add a @reqman.expose, to decorate those ones. (in dict reqman.EXPOSES)

2.8.0 (26/02/21)
- EVOL: ability to expose real python methods (func(x)), in reqman.exposes dict, when used as a lib/module
- EVOL: usage's commandline is now in reqman.__usage__

2.7.0 (20/02/21)
- EVOL: new option "--x:var" to be able to use reqman, to output a computed/var from the env.
        (let you do more scripting for special cases)
- EVOL: "> reqman reqman.conf" has a sense now ;-) (will run BEGIN/END)

2.6.1 (20/02/21)
- FIX: use yaml.SafeLoader instead of yaml.FullLoader (see https://www.huntr.dev/bounties/1-pip-reqman/), thanks to @Asjidkalam & @huntr-helper

2.6.0 (19/02/21)
- EVOL: ENV.path (path to the folder containing the reqman.conf) is available in python method
- FIX: allow setting multiple cookies (Set-Cookie is now a list, in outHeaders)

2.5.1 (11/12/20)
- no more warning of "if non resolved"

2.5.0 (07/12/20)
- bug fixes

2.4.2 (21/8/20)
- EVOL: include pyjwt in the core (useful for py methods in yml)

2.4.1 (27/4/20)
- FIX: for py3.8, RuntimeError: dictionary keys changed during iteration

2.4.0 (24/4/20)
- BIG EVOL: new compare operator ".?"/".!?" (contains/doesnt contains)
- BIG EVOL: simple "if statement" !
- BIG EVOL: selfconf is enabled
- BIG EVOL: new object response, request & rm (full exchange)
- BIG EVOL: a lot more tnr (with fakereqman shebang) ... see REALTESTS!
- EVOL: response.time is now here !
- EVOL: command line var params are guessed now (from json string)!
- FIX: "save" can now be tested (save executed before test, and save in envResponse)
- FIX: remove old shebang system
- FIX: jpath can now resolve python methods too !!! (in a good way)
- FIX: trouble encodings.idna
- RMR2 (lose compatibility with previous rmr)

2.3.10 (3/4/20)
- EVOL: (new test system) tests on all vars, with methods too