@@ -16,7 +16,7 @@ All configurations is done via simple yaml files, editable with any text editors
 [DEMO](https://test-reqman.glitch.me)
 
 **Features**
-   * Light (simple py3 file, 1800 lines of code, and x3 lines for unittests, in TDD mind ... cov:95%)
+   * Light (simple py3 file, 3000 lines of code, and x3 lines for unittests, in TDD mind ... cov:95%)
    * Powerful (at least as postman free version)
    * tests are simple (no code !)
    * Variable pool
